--- a/lib/styles/base.css
+++ b/lib/styles/base.css
@@ -1,1 +1,1 @@
-div{box-sizing:border-box}
+div{box-sizing:border-box}li,ol,ul{line-height:1.7;list-style:none}:root{--yu-border-raduis-round:20px;--yu-font-size:20px}
