--- a/lib/styles/footer.css
+++ b/lib/styles/footer.css
@@ -1,1 +1,1 @@
-div{box-sizing:border-box}.yu-footer{align-items:center;background-color:#79bbff;display:flex;height:60px;justify-content:center}
+div{box-sizing:border-box}li,ol,ul{line-height:1.7;list-style:none}:root{--yu-border-raduis-round:20px;--yu-font-size:20px}.yu-footer{align-items:center;background-color:#79bbff;display:flex;height:60px;justify-content:center}
