--- a/packages/styles/base.scss
+++ b/packages/styles/base.scss
@@ -55,3 +55,8 @@ $largeHeight: 30px;
 $largeWidth: 80px;
 $largeColumnaWidth: 10px;
 $largeRowWidth: 15px;
+
+:root {
+  --yu-border-raduis-round: 20px;
+  --yu-font-size: 20px;
+}
