--- a/lib/styles/main.css
+++ b/lib/styles/main.css
@@ -1,1 +1,1 @@
-div{box-sizing:border-box}.yu-main{align-items:center;background-color:#c6e2ff;display:flex;flex:1;justify-content:center}
+div{box-sizing:border-box}li,ol,ul{line-height:1.7;list-style:none}:root{--yu-border-raduis-round:20px;--yu-font-size:20px}.yu-main{align-items:center;background-color:#c6e2ff;display:flex;flex:1;justify-content:center}
