fix: [carousel] 修复指示器悬停未消除间隔时间

--- a/packages/styles/index.scss
+++ b/packages/styles/index.scss
@@ -11,4 +11,7 @@
 @use "./row.scss" as *;
 @use "./col.scss" as *;
 @use "./container.scss" as *;
-@use "./variable.scss" as *;
+@use "./alert.scss" as *;
+@use "./carousel.scss" as *;
+@use "./carousel-item.scss" as *;
+@use "./icon.scss" as *;
