feat: 完成switch组件基本功能

--- a/packages/styles/avatar.scss
+++ b/packages/styles/avatar.scss
@@ -15,7 +15,10 @@
     height: 100%;
     background-color: border.$darkBorder;
     color: font.$normalText;
-    font-weight: bold;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
     @include variable.normalFlex(center);
     > img {
       width: 100%;
