--- a/packages/styles/base.scss
+++ b/packages/styles/base.scss
@@ -40,6 +40,9 @@ $info-2: #b1b3b8;
 // plain mouseover
 $info-3: #dedfe0;
 
+// theme
+$white: #fff;
+$dark: #18181c;
 // size
 $defaultHeight: 49px;
 $defaultWidth: 100px;
