feat: 完成switch尺寸功能

--- a/packages/styles/switch.scss
+++ b/packages/styles/switch.scss
@@ -54,3 +54,13 @@
   @include CreateYuSwitchBaseStyle();
   @include CreateYuSwitchCoreStyle(100%, 100%, 16px, 16px);
 }
+
+.yu-switch-large {
+  @include CreateYuSwitchBaseStyle(50px, 24px);
+  @include CreateYuSwitchCoreStyle(100%, 100%, 20px, 20px);
+}
+
+.yu-switch-small {
+  @include CreateYuSwitchBaseStyle(30px, 16px);
+  @include CreateYuSwitchCoreStyle(100%, 100%, 12px, 12px);
+}
