--- a/packages/styles/switch.scss
+++ b/packages/styles/switch.scss
@@ -1,27 +1,58 @@
 @use "./base.scss" as base;
 @mixin CreateYuSwitchBaseStyle($width: 40px, $height: 20px) {
-  width: $width;
+  min-width: $width;
   height: $height;
 }
 
-@mixin CreateYuSwitchCoreStyle(
+@mixin CreateYuSwitchCoreWithLabelStyle(
   $width: 100%,
   $height: 100%,
   $actionWidth: 20px,
   $actionHeight: 100%,
-  $actionBG: base.$primary
+  $rounded: 10px,
+  $actionBG: base.$primary,
+  $labelSize: 14px,
+  $innerSize: 12px
 ) {
   > .yu-switch__core {
-    width: $width;
-    height: $height;
+    flex-shrink: 0;
+    min-width: $width;
+    min-height: $height;
     background-color: var(--yu-switch-off-color, base.$info-3);
     display: inline-flex;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: $rounded;
     box-sizing: border-box;
     position: relative;
     transition: all 0.25s linear;
     border: 1px solid base.$info-3;
+    cursor: pointer;
+
+    .yu-switch__inner {
+      flex: 1;
+      font-size: $innerSize;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      transition: all 0.15s linear;
+      cursor: pointer;
+      > span {
+        display: block;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        margin: 0;
+        height: 100%;
+        text-align: center;
+        line-height: calc($actionHeight + 2px);
+      }
+      &.yu-switch__off {
+        padding: 0 4px 0 $actionWidth;
+      }
+      &.yu-switch__on {
+        padding: 0 $actionWidth 0 4px;
+      }
+    }
     .yu-switch__action {
       width: $actionWidth;
       height: $actionHeight;
@@ -31,6 +62,7 @@
       top: 50%;
       border-radius: 50%;
       transition: all 0.25s linear;
+      cursor: pointer;
       &.yu-switch__off {
         left: 0%;
       }
@@ -42,25 +74,78 @@
       background-color: var(--yu-switch-on-color, $actionBG);
     }
   }
+  > .yu-switch__label {
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: $labelSize;
+    transition: all 0.25s linear;
+    cursor: pointer;
+    &.open {
+      color: base.$primary;
+    }
+    &.close {
+      color: base.$primary;
+    }
+    &.yu-switch__label__left {
+      margin-right: 10px;
+    }
+    &.yu-switch__label__right {
+      margin-left: 10px;
+    }
+  }
 }
 
 .yu-switch {
-  display: inline-block;
-  transition: all 1.25s linear;
-  cursor: pointer;
+  display: inline-flex;
 }
 
 .yu-switch-default {
-  @include CreateYuSwitchBaseStyle();
-  @include CreateYuSwitchCoreStyle(100%, 100%, 16px, 16px);
+  @include CreateYuSwitchBaseStyle(40px, 20px);
+  @include CreateYuSwitchCoreWithLabelStyle(40px, 100%, 16px, 16px, 10px);
 }
 
 .yu-switch-large {
   @include CreateYuSwitchBaseStyle(50px, 24px);
-  @include CreateYuSwitchCoreStyle(100%, 100%, 20px, 20px);
+  @include CreateYuSwitchCoreWithLabelStyle(
+    50px,
+    100%,
+    20px,
+    20px,
+    14px,
+    base.$primary,
+    14px,
+    14px
+  );
 }
 
 .yu-switch-small {
   @include CreateYuSwitchBaseStyle(30px, 16px);
-  @include CreateYuSwitchCoreStyle(100%, 100%, 12px, 12px);
+  @include CreateYuSwitchCoreWithLabelStyle(
+    30px,
+    100%,
+    12px,
+    12px,
+    12px,
+    base.$primary,
+    10px,
+    10px
+  );
+}
+
+.yu-switch-is-disabled {
+  > .yu-switch__core {
+    opacity: 0.6;
+    cursor: no-drop;
+    > .yu-switch__action {
+      cursor: no-drop;
+    }
+    > .yu-switch__inner {
+      cursor: no-drop;
+    }
+  }
+  .yu-switch__label {
+    cursor: no-drop;
+  }
 }
