--- a/packages/styles/button.scss
+++ b/packages/styles/button.scss
@@ -12,6 +12,14 @@
   cursor: pointer;
   @include variable.inlineBlockInit();
   @include border.radius();
+  > span {
+    width: 100%;
+    height: 100%;
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
 // type
 .yu-button--info {
