--- a/packages/styles/init.scss
+++ b/packages/styles/init.scss
@@ -1,9 +1,17 @@
 div {
   box-sizing: border-box;
 }
+p,
+span {
+  margin: 0;
+  padding: 0;
+  line-height: 1.4;
+}
 ul,
 li,
 ol {
+  margin: 0;
+  padding: 0;
   list-style: none;
   line-height: 1.7;
 }
