--- a/packages/styles/message.scss
+++ b/packages/styles/message.scss
@@ -4,18 +4,30 @@
   left: 50%;
   min-width: 138px;
   transform: translateX(-50%);
-  display: inline-block;
   padding: 15px 19px;
   border-radius: 5px;
   overflow: hidden;
   z-index: 9;
   top: 0px;
+  display: flex;
+  align-items: center;
   transition: all 0.25s linear;
+  > .yu-message-icon {
+    margin-right: 5px;
+  }
 }
 
 .yu-message-info {
   color: base.$info-2;
   background-color: base.$info-3;
+}
+.yu-message-danger {
+  color: base.$danger-2;
+  background-color: base.$danger-3;
+}
+.yu-message-warning {
+  color: base.$warning-2;
+  background-color: base.$warning-3;
 }
 .yu-message-transition-enter-from {
   opacity: 0;
